[package]
name = "neoblock"
version = "0.1.0"
authors = ["Byron Denham <byrondenham@protonmail.com>"]
edition = "2018"

[lib]
name = "neoblocklib"
path = "src/lib.rs"

[[bin]]
name = "neoblockchain"
path = "src/main.rs"

[dependencies]
crypto-hash = { git = "https://github.com/malept/crypto-hash" }
hex  = "0.4.2"